Addition of js script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="AboutMe">
             <h3> About Me</h3>
             <P> Hi, This is Maurine, Welcome to this page where magic happens. I am a fullstack engineer. I am still under training but very soon all your needs will be met.</P>
+            <button type="btton" onclick="clickMe()">Click Me</button>
         </div>
         <div id="Hobbies">
             <h3>My Hobbies</h3>
@@ -30,5 +31,6 @@
             <p> Telephone Number: 0746802541</p>
             <p>Email: omondimaurine713@gmail.com</p>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
