--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <h1>MAURINE OMONDI</h1>
-        <img src="/home/maurine/Downloads/gv8-97_050619~2.jpg" alt="MAURINE">
+        <img src="./images/gv8-97_050619~2.jpg" alt="MAURINE">
         <div id="AboutMe">
             <h3> About Me</h3>
             <P> Hi, This is Maurine, Welcome to this page where magic happens. I am a fullstack engineer. I am still under training but very soon all your needs will be met.</P>
-            <button type="btton" onclick="clickMe()">Click Me</button>
+            <button type="button" onclick="clickMe()">Click Me</button>
         </div>
         <div id="Hobbies">
             <h3>My Hobbies</h3>
@@ -25,7 +25,7 @@
         </div>
         <h3> Spirit Animal</h3>
         <div id="spiritanimal">
-            <img src="/home/maurine/Downloads/photo-person-wXmkcvIOOXI-unsplash.jpg" alt="Simba">
+            <img src="./images/photo-person-wXmkcvIOOXI-unsplash.jpg" alt="Simba">
         </div>
         <div id="Contact">
             <p> Telephone Number: 0746802541</p>
